--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -112,7 +112,7 @@
                     <p style="text-indent: 2em;line-height: 2em">
                         我们通过十年的企业级信息系统开发经验积累总结与沉淀，根据客户的通用需求及软件开发中遇到的问题，开发了TopJUI前端框架，
                         在满足客户需求的同时，大大提高了前端开发的工作效率。根据TopJUI框架的特性，
-                        我们整合了后端JAVA开发框架（Spring + Spring MVC + Hibernate）及第三方JAVA组件，
+                        我们整合了后端JAVA开发框架（Spring + Spring MVC + Hibernate + Mybatis）及第三方JAVA组件，
                         研发了适用于企业管理的企业级信息化系统开发平台“易网时代企业管理信息系统开发平台”（以下简称“EMIS开发平台”），通过此开发平台，
                         我们实现了企业管理信息系统的快速开发，目前已应用在多个企业的信息管理系统中，提供了在一个平台下支撑数十个子系统，
                         几百个子模块同时运行的企业级信息管理系统解决方案。
