--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -126,7 +126,7 @@
                     <ul>
                         <li>多数据源：实现数据库分布式部署或集成已有信息系统的数据，实现系统整合</li>
                         <li>HQL查询：可通过HQL（Hibernate查询）实现查询或新增、更新、删除等操作</li>
-                        <li>SQL查询：可通过SQL（JDBC Template查询）实现查询或新增、更新、删除等操作</li>
+                        <li>SQL查询：可通过SQL（Mybatis或JDBC查询）实现查询或新增、更新、删除等操作</li>
                         <li>视图查询：可通过调用视图查询数据，实现表与表之间复杂的关联查询功能</li>
                         <li>存储过程：可通过封装好的方法调用存储过程，实现数据库的强大数据处理功能</li>
                         <li>RESTful风格：在控制器中自由配置请求地址参数，实现URL地址的RESTful风格</li>
