--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<div class="container" style="margin-top: 20px;">
+<div class="container-fluid" style="margin-top: 20px;">
     <div class="row">
         <div class="col-md-6">
             <div class="panel panel-success">
