--- a/demo/html/form/combotree_index.html
+++ b/demo/html/form/combotree_index.html
@@ -40,7 +40,7 @@
            height:450,
            width:700,
            buttonsGroup:[
-               {text:'保存',url:'/system/user/save',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
            ]
        }">树形下拉演示</a>
 </div>
