--- a/demo/html/menu/openTab_index.html
+++ b/demo/html/menu/openTab_index.html
@@ -40,15 +40,10 @@
            height:450,
            width:700,
            buttonsGroup:[
-               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:'/system/user/save',iconCls:'icon-add',handler:'ajaxForm'}
            ]
        }">文本输入演示</a>
 </div>
 
 </body>
-<script>
-    setTimeout(function () {
-        $.messager.alert('操作提示','请点击表格左上角的“文本输入演示”按钮');
-    }, 1500);
-</script>
 </html>
