--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -19,12 +19,15 @@
     <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
     <!-- TopJUI框架 -->
     <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
+    <!-- Ueditor编辑器插件 -->
+    <script type="text/javascript" src="../../topjui/plugins/ueditor/utf8-jsp/1.4.3.3/ueditor.config.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/ueditor/utf8-jsp/1.4.3.3/ueditor.all.min.js"></script>
 </head>
 
 <body>
 <table data-toggle="topjui-datagrid"
-       data-options="id:'issueInvoiceDatagrid',
-    url:'../../json/goodslist.json'">
+       data-options="id:'productDg',
+       url:'../../json/goodslist.json'">
     <thead>
     <tr>
         <th data-options="field:'id',title:'ID',checkbox:true"></th>
@@ -36,5 +39,30 @@
     </tr>
     </thead>
 </table>
+
+<!-- 用户 表格工具栏 -->
+<div id="productDg-toolbar"
+     data-options="grid:{
+           type:'datagrid',
+           id:'productDg'
+       }" style="display:none">
+    <a href="javascript:void(0)"
+       data-toggle="topjui-menubutton"
+       data-options="clickEvent:'openDialog',
+       dialog:{
+           id:'userAddDialog',
+           href:'/html/extend/editor.html',
+           width:900,
+           height:500,
+           editor:[
+			   {id:'descriptionAddEditor',field:'description'},
+			   {id:'contentAddEditor',field:'content'}
+		   ],
+           buttonsGroup:[
+               {text:'保存',url:'/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+           ]
+       }">打开文字编辑器窗口</a>
+</div>
+
 </body>
 </html>
