--- a/demo/html/form/numberbox_index.html
+++ b/demo/html/form/numberbox_index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- 公共css/js文件 -->
-    <script type="text/javascript" src="../../topjui/js/topjui.include.js"></script>
+    <!-- EasyUI样式 -->
+    <link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">
+    <!-- TopJUI样式 -->
+    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.all.min.css">
+    <!-- TopJUI配置 -->
+    <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
+    <!-- jQuery核心 -->
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
+    <!-- EasyUI核心 -->
+    <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
+    <!-- TopJUI框架 -->
+    <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
 </head>
 
 <body>
-<table data-toggle="topjui-datagrid" 
-    data-options="id:'productDg',
+<table data-toggle="topjui-datagrid"
+       data-options="id:'productDg',
     url:'../../json/goodslist.json'">
     <thead>
-        <tr>
-            <th data-options="field:'id',title:'ID',checkbox:true"></th>
-            <th data-options="field:'name',title:'商品名称'"></th>
-            <th data-options="field:'code',title:'商品编号'"></th>
-            <th data-options="field:'spec',title:'规格型号'"></th>
-            <th data-options="field:'danwei',title:'规格型号'"></th>
-            <th data-options="field:'sale_price',title:'销售单价'"></th>
-        </tr>
+    <tr>
+        <th data-options="field:'id',title:'ID',checkbox:true"></th>
+        <th data-options="field:'name',title:'商品名称'"></th>
+        <th data-options="field:'code',title:'商品编号'"></th>
+        <th data-options="field:'spec',title:'规格型号'"></th>
+        <th data-options="field:'danwei',title:'规格型号'"></th>
+        <th data-options="field:'sale_price',title:'销售单价'"></th>
+    </tr>
     </thead>
 </table>
 
