--- a/demo/html/menu/request_index.html
+++ b/demo/html/menu/request_index.html
@@ -5,8 +5,20 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- 公共css/js文件 -->
-    <script type="text/javascript" src="../../topjui/js/topjui.include.js"></script>
+    <!-- EasyUI样式 -->
+    <link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">
+    <!-- TopJUI样式 -->
+    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.all.min.css">
+    <!-- TopJUI配置 -->
+    <script type="text/javascript" src="../../topjui/js/topjui.config.js"></script>
+    <!-- jQuery核心 -->
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
+    <!-- EasyUI核心 -->
+    <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="../../topjui/plugins/easyui/easyui-lang-zh_CN.js"></script>
+    <!-- TopJUI框架 -->
+    <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
 </head>
 
 <body>
@@ -33,16 +45,8 @@
        }" style="display:none">
     <a href="javascript:void(0)"
        data-toggle="topjui-menubutton"
-       data-options="clickEvent:'openDialog',
-       dialog:{
-           id:'userAddDialog',
-           href:'/html/form/input.html',
-           height:450,
-           width:700,
-           buttonsGroup:[
-               {text:'保存',url:'/system/user/save',iconCls:'icon-add',handler:'ajaxForm'}
-           ]
-       }">文本输入演示</a>
+       data-options="clickEvent:'request',
+       url:'/json/response/success.json'">执行普通请求</a>
 </div>
 
 </body>
