--- a/demo/html/extend/uploader_index.html
+++ b/demo/html/extend/uploader_index.html
@@ -27,7 +27,7 @@
 <body>
 <table data-toggle="topjui-datagrid"
        data-options="id:'productDg',
-       url:'../../json/goodslist.json'">
+       url:'../../json/product/list.json'">
     <thead>
     <tr>
         <th data-options="field:'id',title:'ID',checkbox:true"></th>
