--- a/demo/html/form/combotree_index.html
+++ b/demo/html/form/combotree_index.html
@@ -30,7 +30,7 @@
         <!-- datagrid表格 -->
         <table data-toggle="topjui-datagrid"
                data-options="id:'productDg',
-               url:'../../json/goodslist.json'">
+               url:'../../json/product/list.json'">
             <thead>
             <tr>
                 <th data-options="field:'id',title:'ID',checkbox:true"></th>
