--- a/demo/html/form/input_index.html
+++ b/demo/html/form/input_index.html
@@ -28,7 +28,7 @@
 
     <div data-options="region:'center',iconCls:'icon-reload',title:'',fit:false,split:true,border:false,bodyCls:'border_left_right'">
         <table data-toggle="topjui-datagrid" data-options="id:'productDg',
-        url:'../../json/goodslist.json',
+        url:'../../json/product/list.json',
         childTab: {
             tabs:[
                 {id:'eastTabs',params:'uuid'}
