--- a/demo/html/grid/datagrid.html
+++ b/demo/html/grid/datagrid.html
@@ -24,7 +24,7 @@
 <body>
 <table data-toggle="topjui-datagrid"
        data-options="id:'issueInvoiceDatagrid',
-    url:'../../json/goodslist.json'">
+    url:'../../json/product/list.json'">
     <thead>
     <tr>
         <th data-options="field:'id',title:'ID',checkbox:true"></th>
