--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -81,7 +81,12 @@
     <div data-options="region:'center',title:'',fit:true,split:true,border:false,bodyCls:'border_top_none'">
         <div id="pp" style="overflow: hidden;">
             <div style="width:35%;">
-                <div title="公告通知" iconCls="icon-databases" collapsible="true" closable="true" style="height:210px;">
+                <div title="常见问题" iconCls="icon-databases" collapsible="true" closable="true" style="height:210px;">
+                    <div class="portal-list">
+                        <a href="http://www.topjui.com/doc/question/fullscreen.html" target="_blank">为什么静态演示系统中首页初始化时不能全屏？</a>
+                    </div>
+                </div>
+                <div title="公告通知" iconCls="icon-dic" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">
                         <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
                     </div>
@@ -95,50 +100,25 @@
                         <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长 王安顺因工作调动请辞</a>
+                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长
+                            王安顺因工作调动请辞</a>
                     </div>
                     <div class="portal-list">
                         <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
                     </div>
                 </div>
-                <div title="最新文章" iconCls="icon-dic" collapsible="true" closable="true" style="height:210px;">
+                <div title="动态演示" iconCls="icon-basket_put" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
+                        系统简介：<a href="http://www.ewsd.cn/emis.html" target="_blank">企业级快速开发平台</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头发布权威信息'})">李克强：地方和部门主要负责同志要带头发布权威信息</a>
+                        演示地址：<a href="http://demo.ewsd.cn/system/index/index" target="_blank">http://demo.ewsd.cn/system/index/index</a>
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
+                        帐号：topjui，密码：topjui
                     </div>
                     <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长 王安顺因工作调动请辞</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
-                    </div>
-                </div>
-                <div title="知识文档" iconCls="icon-basket_put" collapsible="true" closable="true" style="height:210px;">
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'强化党内监督是全面从严治党重要保障'})">强化党内监督是全面从严治党重要保障</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：地方和部门主要负责同志要带头发布权威信息'})">李克强：地方和部门主要负责同志要带头发布权威信息</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'李克强：政务公开是常态不公开是例外'})">李克强：政务公开是常态不公开是例外</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'军委机关将总体实行“部—局—处”三级体制'})">军委机关将总体实行“部—局—处”三级体制</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'蔡奇就任北京代市长 王安顺因工作调动请辞'})">蔡奇就任北京代市长 王安顺因工作调动请辞</a>
-                    </div>
-                    <div class="portal-list">
-                        <a href="javascript:window.parent.addParentTab({href:'/html/article/detail.html',title:'问中国：民生保障不是“清谈馆”办好实事方能得民心'})">问中国：民生保障不是“清谈馆”办好实事方能得民心</a>
+                        本动态演示系统为 <a href="http://www.ewsd.cn" target="_blank">易网时代</a> 商业产品，欢迎洽谈合作！
                     </div>
                 </div>
             </div>
@@ -194,10 +174,14 @@
                 </div>
                 <div title="关于本系统" iconCls="icon-shield" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">系统名称：TopJUI前端框架 V1.0正式版</div>
-                    <div class="portal-list">GIT 下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a></div>
-                    <div class="portal-list">官方网站：<a href="http://www.topjui.com" target="_blank">http://www.topjui.com</a></div>
-                    <div class="portal-list">开发文档：<a href="http://www.topjui.com/doc.html" target="_blank">http://www.topjui.com/doc.html</a></div>
-                    <div class="portal-list">联系我们：<a href="http://www.ewsd.cn/contact.html" target="_blank">http://www.ewsd.cn/contact.html</a></div>
+                    <div class="portal-list">GIT 下载：<a href="http://git.oschina.net/xvpindex/TopJUI" target="_blank">http://git.oschina.net/xvpindex/TopJUI</a>
+                    </div>
+                    <div class="portal-list">官方网站：<a href="http://www.topjui.com"
+                                                     target="_blank">http://www.topjui.com</a></div>
+                    <div class="portal-list">开发文档：<a href="http://www.topjui.com/doc.html" target="_blank">http://www.topjui.com/doc.html</a>
+                    </div>
+                    <div class="portal-list">联系我们：<a href="http://www.ewsd.cn/contact.html" target="_blank">http://www.ewsd.cn/contact.html</a>
+                    </div>
                     <div class="portal-list">系统提供：<a href="http://www.ewsd.cn" target="_blank">易网时代（深圳）信息技术有限公司</a>
                     </div>
                 </div>
