--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -83,7 +83,7 @@
             <div style="width:35%;">
                 <div title="常见问题" iconCls="icon-databases" collapsible="true" closable="true" style="height:210px;">
                     <div class="portal-list">
-                        <a href="http://www.topjui.com/doc/question/fullscreen.html" target="_blank">为什么静态演示系统中首页初始化时不能全屏？</a>
+                        <a href="javascript:window.parent.addParentTab({href:'http://www.topjui.com/doc/question/fullscreen.html',title:'TopJUI前端框架'})" target="_blank">静态演示系统中首页初始化为什么有时不能全屏？</a>
                     </div>
                 </div>
                 <div title="公告通知" iconCls="icon-dic" collapsible="true" closable="true" style="height:210px;">
